--- a/app/src/main/res/drawable/toggle_selector.xml
+++ b/app/src/main/res/drawable/toggle_selector.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_checked="true"
-        android:drawable="@drawable/pause" />
+        android:drawable="@android:drawable/ic_media_pause" />
     <item
         android:state_checked="false"
-        android:drawable="@drawable/play" />
+        android:drawable="@android:drawable/ic_media_play" />
 </selector>
