--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -14,7 +14,8 @@
         android:layout_gravity="center"
         android:src="@drawable/whitecircle"
         android:visibility="gone"
-        android:tint="@android:color/holo_red_dark"/>
+        android:tint="@android:color/holo_red_dark"
+        android:layout_centerInParent="true"/>
 
     <ImageView
         android:id="@+id/demo_quad2"
@@ -24,7 +25,8 @@
         android:layout_gravity="center"
         android:src="@drawable/whitecircle"
         android:visibility="gone"
-        android:tint="@android:color/holo_green_dark"/>
+        android:tint="@android:color/holo_green_dark"
+        android:layout_centerInParent="true"/>
 
     <ImageView
         android:id="@+id/demo_quad3"
@@ -34,7 +36,8 @@
         android:layout_gravity="center"
         android:src="@drawable/whitecircle"
         android:visibility="gone"
-        android:tint="@android:color/holo_blue_dark"/>
+        android:tint="@android:color/holo_blue_dark"
+        android:layout_centerInParent="true"/>
 
     <LinearLayout
         android:id="@+id/linLay"
