Add basic path planner service integration (to be used with https://github.com/radionavlab/app_pathplanner_interface)

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -46,6 +46,26 @@
                         android:layout_height="15dp" />
 
                     <TextView
+                        android:id="@+id/service_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:text="Path Planner Servicing?" />
+
+                    <ToggleButton
+                        android:id="@+id/service_toggle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:checked="false"
+                        android:text="ServiceToggle"
+                        android:textSize="20dp" />
+
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="15dp" />
+
+                    <TextView
                         android:id="@+id/toggle_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
