--- a/app/src/main/res/layout/content_preview.xml
+++ b/app/src/main/res/layout/content_preview.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="utmg.android_interface.PreviewActivity"
+    tools:context="utmg.android_interface.Activities.PreviewActivity"
     tools:showIn="@layout/activity_preview">
 
 </android.support.constraint.ConstraintLayout>
