Portrait and landscape modes are both now seamless and functional

--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -45,7 +45,7 @@
         android:id="@+id/linLay"
         android:layout_width="655dp"
         android:layout_height="396dp"
-        android:layout_gravity="center_horizontal|top"
+        android:layout_gravity="center"
         android:paddingTop="5dp"
         android:orientation="horizontal">
 
