--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -1,45 +1,224 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/preview_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="utmg.android_interface.PreviewActivity">
+    tools:context="utmg.android_interface.MainActivity">
+
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/toolbarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:background="?attr/colorPrimary"
+                android:elevation="14dp"
+                android:minHeight="170dp"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+        </android.support.design.widget.AppBarLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_below="@id/toolbarLayout"
+            android:layout_height="40dp"
+            android:weightSum="1"
+            android:visibility="gone">
+
+            <Button
+                android:id="@+id/kill_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:layout_marginLeft="5dp"
+                android:backgroundTint="@android:color/holo_red_dark"
+                android:textColor="@android:color/white"
+                android:text="TERMINATE!"
+                android:visibility="gone"/>
+
+            <TextView
+                android:id="@+id/inMeters"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:text="xMeters"
+                android:textSize="15dp"
+                android:layout_weight="0.4"
+                android:visibility="gone"/>
+
+            <TextView
+                android:id="@+id/quad2pixel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:textSize="15dp"
+                android:text="      quad2pixel"
+                android:layout_weight="0.4"
+                android:visibility="gone"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="0.1"
+                android:visibility="gone">
+
+                <Switch
+                    android:id="@+id/quad1Switch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|right"
+                    android:text="Quad1"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:visibility="gone"/>
+
+                <Switch
+                    android:id="@+id/quad2Switch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|right"
+                    android:layout_marginLeft="50dp"
+                    android:text="Quad2"
+                    android:textColor="@android:color/holo_green_dark"
+                    android:visibility="gone"/>
+
+                <Switch
+                    android:id="@+id/quad3Switch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|right"
+                    android:layout_marginLeft="50dp"
+                    android:text="Quad3"
+                    android:textColor="@android:color/holo_blue_dark"
+                    android:visibility="gone"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <ImageView
-        android:id="@+id/demo_quad1"
+        android:id="@+id/quad1"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:adjustViewBounds="true"
+        android:layout_gravity="center"
+        android:src="@drawable/quad"
+        android:visibility="gone"
+        android:tint="@android:color/holo_red_dark"/>
+
+    <ImageView
+        android:id="@+id/quad2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:layout_gravity="center"
-        android:src="@drawable/whitecircle"
+        android:src="@drawable/quad"
         android:visibility="gone"
-        android:tint="@android:color/holo_red_dark"
-        android:layout_centerInParent="true"/>
+        android:tint="@android:color/holo_green_dark"/>
 
     <ImageView
-        android:id="@+id/demo_quad2"
-        android:layout_width="60dp"
+        android:id="@+id/quad3"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:layout_gravity="center"
-        android:src="@drawable/whitecircle"
+        android:src="@drawable/quad"
         android:visibility="gone"
-        android:tint="@android:color/holo_green_dark"
-        android:layout_centerInParent="true"/>
+        android:tint="@android:color/holo_blue_dark"/>
 
     <ImageView
-        android:id="@+id/demo_quad3"
-        android:layout_width="60dp"
+        android:id="@+id/sword"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:layout_gravity="center"
-        android:src="@drawable/whitecircle"
-        android:visibility="gone"
-        android:tint="@android:color/holo_blue_dark"
-        android:layout_centerInParent="true"/>
+        android:src="@drawable/sword"
+        android:visibility="gone"/>
+
+    <ImageView
+        android:id="@+id/obstacle1"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:adjustViewBounds="true"
+        android:layout_gravity="center"
+        android:src="@drawable/obstacle"
+        android:visibility="gone"/>
+
+    <ImageView
+        android:id="@+id/obstacle2"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:adjustViewBounds="true"
+        android:layout_gravity="center"
+        android:src="@drawable/obstacle"
+        android:visibility="gone"/>
+
+
+    <TextView
+        android:id="@+id/seekbar_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="100dp"
+        android:layout_marginLeft="75dp"
+        android:layout_marginTop="250dp"
+        android:text="0"
+        android:textSize="20dp"
+        android:visibility="gone"/>
+
+    <FrameLayout
+        android:id="@+id/slider_frame_layout"
+        android:layout_width="30dp"
+        android:layout_height="400dp"
+        android:orientation="vertical"
+        android:layout_marginLeft="40dp"
+        android:layout_gravity="center|left"
+        android:visibility="gone">
+
+        <SeekBar
+            android:id="@+id/slider"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:max="2"
+            android:rotation="270"
+            android:thumb="@drawable/altitude_seekbar_thumb"
+            android:background="@drawable/altitude_seekbar"
+            android:visibility="gone"/>
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/new_dimensions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="15dp"
+        android:text="New Dimensions"
+        android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/previewButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="35dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColor="@android:color/white"
+        android:text="PREVIEW"
+        android:visibility="gone"/>
 
     <LinearLayout
         android:id="@+id/linLay"
@@ -58,57 +237,13 @@
 
     </LinearLayout>
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom">
 
-        <TableRow>
-            <RelativeLayout
-                android:id="@+id/seekbar_relative"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_weight="1">
-
-                <!--
-                <SeekBar
-                    android:id="@+id/quadAllSeek"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:paddingBottom="15dp"
-                    android:paddingTop="15dp" /> -->
-            </RelativeLayout>
-
-            <!--
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingBottom="7.5dp"
-                android:paddingTop="7.5dp"
-                android:paddingRight="15dp">
-
-                <ToggleButton
-                    android:id="@+id/toggleButton"
-                    android:layout_width="90dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_horizontal"
-                    android:background="@drawable/toggle_selector"
-                    android:textOff=" "
-                    android:textOn="" />
-            </LinearLayout> -->
-
-        </TableRow>
-
-    </TableLayout>
 
     <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right|top"
-        app:fab_expandDirection="down">
+        android:layout_gravity="right|bottom"
+        app:fab_expandDirection="up">
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/terminate_preview"
@@ -126,6 +261,58 @@
 
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
-    <!--<include layout="@layout/content_preview" />-->
-
 </android.support.design.widget.CoordinatorLayout>
+
+
+
+
+
+
+
+<!--
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom">
+
+        <TableRow>
+            <RelativeLayout
+                android:id="@+id/seekbar_relative"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_weight="1">
+
+
+                <SeekBar
+                    android:id="@+id/quadAllSeek"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:paddingBottom="15dp"
+                    android:paddingTop="15dp" />
+            </RelativeLayout>
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingBottom="7.5dp"
+                android:paddingTop="7.5dp"
+                android:paddingRight="15dp">
+
+                <ToggleButton
+                    android:id="@+id/toggleButton"
+                    android:layout_width="90dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@drawable/toggle_selector"
+                    android:textOff=" "
+                    android:textOn="" />
+            </LinearLayout>
+
+        </TableRow>
+
+    </TableLayout>
+-->
