--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -152,7 +152,7 @@
     <ImageView
         android:id="@+id/obstacle1"
         android:layout_width="wrap_content"
-        android:layout_height="80dp"
+        android:layout_height="512dp"
         android:adjustViewBounds="true"
         android:layout_gravity="center"
         android:src="@drawable/obstacle"/>
@@ -160,10 +160,10 @@
     <ImageView
         android:id="@+id/obstacle2"
         android:layout_width="wrap_content"
-        android:layout_height="80dp"
+        android:layout_height="512dp"
         android:adjustViewBounds="true"
         android:layout_gravity="center"
-        android:src="@drawable/obstacle"
+        android:src="@drawable/target"
         android:visibility="gone"/>
 
 
