--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="utmg.android_interface.Activities.MainActivity">
+    tools:context="utmg.android_interface.activity.MainActivity">
 
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -215,7 +215,7 @@
         android:layout_gravity="center"
         android:orientation="horizontal">
 
-        <utmg.android_interface.Canvases.DrawingCanvas
+        <utmg.android_interface.canvas.DrawingCanvas
             android:id="@+id/signature_canvas"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
