--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="utmg.android_interface.Activities.SettingsActivity">
+    tools:context="utmg.android_interface.activity.SettingsActivity">
 
     <ScrollView
         android:layout_width="match_parent"
