--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -215,7 +215,7 @@
         android:layout_gravity="center"
         android:orientation="horizontal">
 
-        <utmg.android_interface.canvas.DrawingCanvas
+        <utmg.android_interface.view.canvas.DrawingCanvas
             android:id="@+id/signature_canvas"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
